--- a/me.html
+++ b/me.html
@@ -199,128 +199,134 @@
   
   
   <script>
-    const quizData = [
+    const quizData = はい、全ての問題データを "correct" から "answer" に変更したものを提供します：
+
+```javascript
+const quizData = [
   {
     "question": "眼球の外層を構成する膜はどれか？",
     "options": ["網膜", "強膜", "虹彩", "硝子体"],
-    "correct": 1,
+    "answer": 1,
     "explanation": "眼球の外層は強靭なコラーゲン線維からなる強膜で、眼球の約5/6を占めています"
   },
   {
     "question": "光の屈折を調整する役割を持つのはどれか？",
     "options": ["水晶体", "角膜", "網膜", "硝子体"],
-    "correct": 0,
+    "answer": 0,
     "explanation": "水晶体は遠近調節を行い、光を屈折させて網膜上に像を結ぶ役割を果たしています"
   },
   {
     "question": "瞳孔の大きさを調節する神経はどれか？",
     "options": ["交感神経", "副交感神経", "視神経", "動眼神経"],
-    "correct": 1,
+    "answer": 1,
     "explanation": "副交感神経は瞳孔括約筋を収縮させ、瞳孔の大きさを調節します"
   },
   {
     "question": "角膜の表面を覆っているのはどれか？",
     "options": ["単層扁平上皮", "重層扁平上皮", "円柱上皮", "立方上皮"],
-    "correct": 1,
+    "answer": 1,
     "explanation": "角膜の表面は非角化重層扁平上皮で覆われており、強膜の結膜上皮に続いています"
   },
   {
     "question": "眼房水の流出を担う構造はどれか？",
     "options": ["瞳孔", "毛様体", "強膜静脈洞", "視神経"],
-    "correct": 2,
+    "answer": 2,
     "explanation": "強膜静脈洞（シュレム管）は眼房水の流出部であり、眼内圧の調整に関与します"
   },
   {
     "question": "遠近調節に関わる筋肉はどれか？",
     "options": ["瞳孔散大筋", "毛様体筋", "眼輪筋", "内側直筋"],
-    "correct": 1,
+    "answer": 1,
     "explanation": "毛様体筋は収縮して水晶体の厚さを調整し、遠近調節を行います"
   },
   {
     "question": "虹彩に存在しない成分はどれか？",
     "options": ["色素", "血管", "神経", "視細胞"],
-    "correct": 3,
+    "answer": 3,
     "explanation": "虹彩は血管、神経、色素を含みますが、視細胞は含まれていません。視細胞は網膜に存在します"
   },
   {
     "question": "眼球内部を暗くする役割を持つのはどれか？",
     "options": ["強膜", "脈絡膜", "硝子体", "角膜"],
-    "correct": 1,
+    "answer": 1,
     "explanation": "脈絡膜は血管と色素細胞が豊富で、内部を暗くして眼球壁に栄養を与えます"
   },
   {
     "question": "色覚に関与するのはどれか？",
     "options": ["視細胞", "毛様体", "瞳孔散大筋", "強膜"],
-    "correct": 0,
+    "answer": 0,
     "explanation": "視細胞は色覚に関与し、特に錐体細胞は色を識別します"
   },
   {
     "question": "光を感じない部分はどれか？",
     "options": ["黄斑", "中心窩", "視神経乳頭", "虹彩"],
-    "correct": 2,
+    "answer": 2,
     "explanation": "視神経乳頭には視細胞がなく、光を感じないため盲点とも呼ばれます"
   },
   {
     "question": "眼球内の透明なゼリー状の物質はどれか？",
     "options": ["眼房水", "水晶体", "硝子体", "虹彩"],
-    "correct": 2,
+    "answer": 2,
     "explanation": "硝子体は水晶体の後ろにあり、眼球の大部分を占めるゼリー状の物質です"
   },
   {
     "question": "暗順応に重要な物質はどれか？",
     "options": ["ロドプシン", "ビタミンD", "アドレナリン", "セロトニン"],
-    "correct": 0,
+    "answer": 0,
     "explanation": "ロドプシンは視細胞内で光を感じ、暗順応に重要な役割を果たします"
   },
   {
     "question": "眼球の運動を調節する神経でないものはどれか？",
     "options": ["動眼神経", "滑車神経", "外転神経", "視神経"],
-    "correct": 3,
+    "answer": 3,
     "explanation": "視神経は視覚を伝達する神経であり、眼球の運動には関与しません"
   },
   {
     "question": "緑内障の原因となるのはどれか？",
     "options": ["網膜の損傷", "眼圧の上昇", "水晶体の硬化", "毛様体筋の収縮"],
-    "correct": 1,
+    "answer": 1,
     "explanation": "眼房水の流出が阻害され、眼内圧が上昇することで緑内障が発生します"
   },
   {
     "question": "瞳孔が収縮する反射はどれか？",
     "options": ["角膜反射", "瞳孔反射", "瞬目反射", "前庭反射"],
-    "correct": 1,
+    "answer": 1,
     "explanation": "瞳孔反射は、光の強さに応じて瞳孔の大きさを調節する反射です"
   },
   {
     "question": "加齢により起こる視覚の変化で正しいのはどれか？",
     "options": ["ロドプシンの増加", "水晶体の柔軟性の低下", "視神経の太さの増加", "硝子体の硬化"],
-    "correct": 1,
+    "answer": 1,
     "explanation": "加齢により水晶体が硬くなり、遠近調節が困難になる現象を老視と呼びます"
   },
   {
     "question": "涙液を鼻腔へと導く管はどれか？",
     "options": ["涙管", "鼻涙管", "涙点", "涙腺"],
-    "correct": 1,
+    "answer": 1,
     "explanation": "涙液は鼻涙管を通って鼻腔の下鼻道に流れ込みます"
   },
   {
     "question": "視力1.0の人が識別できる最小の視角はどれか？",
     "options": ["1度", "30分", "1分", "0.1度"],
-    "correct": 2,
+    "answer": 2,
     "explanation": "視力1.0は、1分角の視角を識別できる能力を指します"
   },
   {
     "question": "中心窩の特徴として正しいのはどれか？",
     "options": ["錐体が密集している", "杆体が密集している", "神経線維が密集している", "色素細胞が多い"],
-    "correct": 0,
+    "answer": 0,
     "explanation": "中心窩は錐体が集まっており、視力が最も高くなる部分です"
   },
   {
     "question": "夜盲症の原因となるビタミン欠乏はどれか？",
     "options": ["ビタミンA", "ビタミンB", "ビタミンC", "ビタミンD"],
-    "correct": 0,
+    "answer": 0,
     "explanation": "ビタミンAはロドプシンの生成に関与し、欠乏すると夜盲症（鳥目）になります"
   }
 ]
+```
+
+これで、JavaScriptのコードと問題データの整合性が取れるようになります。正解判定が正しく機能するはずです。
 ;
 
       let currentQuestion = 0;
