--- a/kankakuki.html
+++ b/kankakuki.html
@@ -200,125 +200,132 @@
   <script>
     const quizData = [
   {
-    "question": "眼球の外層を構成する膜はどれか？",
-    "options": ["網膜", "強膜", "虹彩", "硝子体"],
+    "question": "耳の構造のうち、音波を振動に変換する役割を持つのはどれか。",
+    "options": ["耳介", "鼓膜", "耳小骨", "蝸牛"],
     "answer": 1,
-    "explanation": "眼球の外層は強靭なコラーゲン線維からなる強膜で、眼球の約5/6を占めています"
+    "explanation": "鼓膜は外耳と中耳を隔てる薄い膜で、音波を受けて振動することで、音の情報を中耳に伝えます。"
   },
   {
-    "question": "光の屈折を調整する役割を持つのはどれか？",
-    "options": ["水晶体", "角膜", "網膜", "硝子体"],
-    "answer": 0,
-    "explanation": "水晶体は遠近調節を行い、光を屈折させて網膜上に像を結ぶ役割を果たしています"
-  },
-  {
-    "question": "瞳孔の大きさを調節する神経はどれか？",
-    "options": ["交感神経", "副交感神経", "視神経", "動眼神経"],
+    "question": "中耳にある耳小骨を構成する骨はどれか。",
+    "options": ["砧骨、鐙骨、槌骨", "槌骨、砧骨、鐙骨", "鐙骨、槌骨、砧骨", "槌骨、鐙骨、砧骨"],
     "answer": 1,
-    "explanation": "副交感神経は瞳孔括約筋を収縮させ、瞳孔の大きさを調節します"
+    "explanation": "中耳には、鼓膜の振動を増幅して内耳に伝える３つの小さな骨、槌骨、砧骨、鐙骨があります。"
   },
   {
-    "question": "角膜の表面を覆っているのはどれか？",
-    "options": ["単層扁平上皮", "重層扁平上皮", "円柱上皮", "立方上皮"],
-    "answer": 1,
-    "explanation": "角膜の表面は非角化重層扁平上皮で覆われており、強膜の結膜上皮に続いています"
-  },
-  {
-    "question": "眼房水の流出を担う構造はどれか？",
-    "options": ["瞳孔", "毛様体", "強膜静脈洞", "視神経"],
+    "question": "内耳で、回転運動の加速度を感知する器官はどれか。",
+    "options": ["蝸牛", "前庭", "半規管", "鼓室"],
     "answer": 2,
-    "explanation": "強膜静脈洞（シュレム管）は眼房水の流出部であり、眼内圧の調整に関与します"
+    "explanation": "半規管は、内部にリンパ液を満たした３つのループ状の管からなり、回転運動によるリンパ液の動きを感知することで、体のバランスを保つのに役立っています。"
   },
   {
-    "question": "遠近調節に関わる筋肉はどれか？",
-    "options": ["瞳孔散大筋", "毛様体筋", "眼輪筋", "内側直筋"],
+    "question": "音の高低は、何と表現されるか？",
+    "options": ["dB（デシベル）", "Hz（ヘルツ）", "W（ワット）", "Pa（パスカル）"],
     "answer": 1,
-    "explanation": "毛様体筋は収縮して水晶体の厚さを調整し、遠近調節を行います"
+    "explanation": "音の高さは周波数で表され、単位はHz（ヘルツ）です。1秒間に何回振動するかを表しています。"
   },
   {
-    "question": "虹彩に存在しない成分はどれか？",
-    "options": ["色素", "血管", "神経", "視細胞"],
-    "answer": 3,
-    "explanation": "虹彩は血管、神経、色素を含みますが、視細胞は含まれていません。視細胞は網膜に存在します"
-  },
-  {
-    "question": "眼球内部を暗くする役割を持つのはどれか？",
-    "options": ["強膜", "脈絡膜", "硝子体", "角膜"],
+    "question": "ヒトの可聴音の周波数範囲はどれか。",
+    "options": ["2～200 Hz", "20～20,000 Hz", "200～200,000 Hz", "2,000～2,000,000 Hz"],
     "answer": 1,
-    "explanation": "脈絡膜は血管と色素細胞が豊富で、内部を暗くして眼球壁に栄養を与えます"
+    "explanation": "ヒトが聞き取れる音の周波数範囲はおよそ20～20,000 Hzです。これより高い周波数の音は超音波と呼ばれます。"
   },
   {
-    "question": "色覚に関与するのはどれか？",
-    "options": ["視細胞", "毛様体", "瞳孔散大筋", "強膜"],
+    "question": "中耳炎などで、音が内耳まで伝わりにくくなる難聴を何というか。",
+    "options": ["感音難聴", "伝音難聴", "老人性難聴", "騒音性難聴"],
+    "answer": 1,
+    "explanation": "伝音難聴は、外耳や中耳の障害によって、音が内耳にうまく伝わらないために起こる難聴です。中耳炎などが原因となることがあります。"
+  },
+  {
+    "question": "味蕾はどこに存在するか？",
+    "options": ["舌の表面", "歯茎", "口蓋", "咽頭"],
     "answer": 0,
-    "explanation": "視細胞は色覚に関与し、特に錐体細胞は色を識別します"
+    "explanation": "味蕾は、舌の表面にある乳頭と呼ばれる小さな突起の中に存在します。"
   },
   {
-    "question": "光を感じない部分はどれか？",
-    "options": ["黄斑", "中心窩", "視神経乳頭", "虹彩"],
+    "question": "基本的な味覚に含まれないのはどれか？",
+    "options": ["甘味", "うま味", "辛味", "苦味"],
     "answer": 2,
-    "explanation": "視神経乳頭には視細胞がなく、光を感じないため盲点とも呼ばれます"
+    "explanation": "基本的な味覚は、甘味、酸味、塩味、苦味、うま味の５種類です。辛味は痛覚刺激によるものです。"
   },
   {
-    "question": "眼球内の透明なゼリー状の物質はどれか？",
-    "options": ["眼房水", "水晶体", "硝子体", "虹彩"],
+    "question": "嗅細胞はどこに存在するか？",
+    "options": ["鼻腔の最上部", "鼻腔の最下部", "副鼻腔", "咽頭"],
+    "answer": 0,
+    "explanation": "嗅細胞は鼻腔の最上部にある嗅粘膜に存在し、匂い物質を感知します。"
+  },
+  {
+    "question": "痛覚は、どの神経終末が刺激されることで起こるか。",
+    "options": ["運動神経終末", "自由神経終末", "ルフィニ終末", "パチニ小体"],
+    "answer": 1,
+    "explanation": "自由神経終末は、皮膚や粘膜、骨膜、内臓などに広く分布し、痛み刺激を感知する受容器として機能します。"
+  },
+  {
+    "question": "体性痛と内臓痛のうち、局在がはっきりしているのはどちらか？",
+    "options": ["体性痛", "内臓痛"],
+    "answer": 0,
+    "explanation": "体性痛は、皮膚や筋肉、骨など体表の痛みで、痛みの発生場所が比較的はっきりしています。一方、内臓痛は、痛みの発生場所が漠然としていることが多く、関連痛として体表に痛みを感じることもあります。"
+  },
+  {
+    "question": "内臓の痛みを体表の痛みとして感じる現象を何というか。",
+    "options": ["投射痛", "関連痛", "幻肢痛", "神経障害性疼痛"],
+    "answer": 1,
+    "explanation": "内臓からの痛みの信号が、脊髄で皮膚からの痛みの信号と同じ経路を通るため、内臓の痛みを皮膚の痛みとして感じる錯覚が生じます。これを関連痛といいます。"
+  },
+  {
+    "question": "強力な鎮痛作用を持つオピオイド鎮痛薬はどれか。",
+    "options": ["アスピリン", "インドメタシン", "モルヒネ", "アセトアミノフェン"],
     "answer": 2,
-    "explanation": "硝子体は水晶体の後ろにあり、眼球の大部分を占めるゼリー状の物質です"
+    "explanation": "モルヒネは、オピオイド受容体に作用する強力な鎮痛薬で、激しい痛みを緩和するために使用されます。"
   },
   {
-    "question": "暗順応に重要な物質はどれか？",
-    "options": ["ロドプシン", "ビタミンD", "アドレナリン", "セロトニン"],
+    "question": "耳垢は、何から分泌される物質と、何からできているか。",
+    "options": ["アポクリン腺、上皮細胞", "エクリン腺、ケラチン", "皮脂腺、メラニン", "耳下腺、コラーゲン"],
     "answer": 0,
-    "explanation": "ロドプシンは視細胞内で光を感じ、暗順応に重要な役割を果たします"
+    "explanation": "耳垢は、外耳道にあるアポクリン腺（耳道腺）から分泌される物質と、剥がれ落ちた上皮細胞が混ざってできています。"
   },
   {
-    "question": "眼球の運動を調節する神経でないものはどれか？",
-    "options": ["動眼神経", "滑車神経", "外転神経", "視神経"],
-    "answer": 3,
-    "explanation": "視神経は視覚を伝達する神経であり、眼球の運動には関与しません"
-  },
-  {
-    "question": "緑内障の原因となるのはどれか？",
-    "options": ["網膜の損傷", "眼圧の上昇", "水晶体の硬化", "毛様体筋の収縮"],
-    "answer": 1,
-    "explanation": "眼房水の流出が阻害され、眼内圧が上昇することで緑内障が発生します"
-  },
-  {
-    "question": "瞳孔が収縮する反射はどれか？",
-    "options": ["角膜反射", "瞳孔反射", "瞬目反射", "前庭反射"],
-    "answer": 1,
-    "explanation": "瞳孔反射は、光の強さに応じて瞳孔の大きさを調節する反射です"
-  },
-  {
-    "question": "加齢により起こる視覚の変化で正しいのはどれか？",
-    "options": ["ロドプシンの増加", "水晶体の柔軟性の低下", "視神経の太さの増加", "硝子体の硬化"],
-    "answer": 1,
-    "explanation": "加齢により水晶体が硬くなり、遠近調節が困難になる現象を老視と呼びます"
-  },
-  {
-    "question": "涙液を鼻腔へと導く管はどれか？",
-    "options": ["涙管", "鼻涙管", "涙点", "涙腺"],
-    "answer": 1,
-    "explanation": "涙液は鼻涙管を通って鼻腔の下鼻道に流れ込みます"
-  },
-  {
-    "question": "視力1.0の人が識別できる最小の視角はどれか？",
-    "options": ["1度", "30分", "1分", "0.1度"],
+    "question": "蝸牛内にある聴覚受容器は何か。",
+    "options": ["クプラ", "耳石", "コルチ器", "膨大部稜"],
     "answer": 2,
-    "explanation": "視力1.0は、1分角の視角を識別できる能力を指します"
+    "explanation": "コルチ器は蝸牛管の基底膜上にあり、有毛細胞が音の振動を電気信号に変換する役割を担っています。"
   },
   {
-    "question": "中心窩の特徴として正しいのはどれか？",
-    "options": ["錐体が密集している", "杆体が密集している", "神経線維が密集している", "色素細胞が多い"],
+    "question": "鼓室と咽頭を繋ぎ、鼓室内圧の調整をしている器官はどれか。",
+    "options": ["耳管", "外耳道", "半規管", "蝸牛管"],
     "answer": 0,
-    "explanation": "中心窩は錐体が集まっており、視力が最も高くなる部分です"
+    "explanation": "耳管（ユースタキオ管）は、鼓室と咽頭を繋ぐ管で、鼓室内の気圧を調整する役割を担っています。耳管が開閉することで、鼓膜が正常に振動できるようになっています。"
   },
   {
-    "question": "夜盲症の原因となるビタミン欠乏はどれか？",
-    "options": ["ビタミンA", "ビタミンB", "ビタミンC", "ビタミンD"],
+    "question": "舌の味覚を支配する神経はどれか。",
+    "options": ["三叉神経、顔面神経、舌咽神経", "三叉神経、迷走神経、副神経", "顔面神経、舌咽神経、迷走神経", "舌咽神経、迷走神経、副神経"],
     "answer": 0,
-    "explanation": "ビタミンAはロドプシンの生成に関与し、欠乏すると夜盲症（鳥目）になります"
+    "explanation": "舌前2/3の味覚は顔面神経、舌後1/3の味覚は舌咽神経が支配しています。また、舌前2/3の触覚は三叉神経が支配しています。"
+  },
+  {
+    "question": "嗅覚の情報を脳に伝える神経はどれか。",
+    "options": ["嗅神経", "視神経", "動眼神経", "滑車神経"],
+    "answer": 0,
+    "explanation": "嗅神経は、嗅細胞の軸索が集まって形成され、嗅覚情報を嗅球から脳に伝達します。"
+  },
+  {
+    "question": "痛みを増強する物質として、誤っているものはどれか。",
+    "options": ["ブラジキニン", "プロスタグランジン", "エンケファリン", "サブスタンスP"],
+    "answer": 2,
+    "explanation": "エンケファリンは、鎮痛作用のある内因性オピオイドです。ブラジキニン、プロスタグランジン、サブスタンスPは発痛物質です。"
+  },
+{
+    "question": "組織損傷時に産生され、発痛作用を持つ物質はどれか",
+    "options": ["ブラジキニン", "ヒスタミン", "セロトニン", "アセチルコリン"],
+    "answer": 0,
+    "explanation": "ブラジキニンは、組織損傷時に産生される生理活性物質で、発痛作用や炎症反応を引き起こします。"
+  },
+{
+    "question": "平衡覚を司る器官はどれか",
+    "options": ["蝸牛", "前庭と半規管", "コルチ器", "鼓膜"],
+    "answer": 1,
+    "explanation": "前庭は直線加速度や傾きを、半規管は回転加速度を感知し、平衡覚を保つのに重要な役割を果たしています。"
   }
+
 ]
 ;
 
