--- a/hihunokouzou.html
+++ b/hihunokouzou.html
@@ -200,132 +200,95 @@
   <script>
     const quizData = [
   {
-    "question": "耳の構造のうち、音波を振動に変換する役割を持つのはどれか。",
-    "options": ["耳介", "鼓膜", "耳小骨", "蝸牛"],
-    "answer": 1,
-    "explanation": "鼓膜は外耳と中耳を隔てる薄い膜で、音波を受けて振動することで、音の情報を中耳に伝えます。"
+    "question": "皮膚の構造のうち、皮膚の色をつくるメラニンを産生する細胞が存在するのはどこか。",
+    "options": ["表皮", "真皮", "皮下組織", "毛包"],
+    "answer": 0,
+    "explanation": "メラニンを産生するメラニン細胞は表皮の基底層に存在し、皮膚の色をつくる役割を担っています。"
   },
   {
-    "question": "中耳にある耳小骨を構成する骨はどれか。",
-    "options": ["砧骨、鐙骨、槌骨", "槌骨、砧骨、鐙骨", "鐙骨、槌骨、砧骨", "槌骨、鐙骨、砧骨"],
-    "answer": 1,
-    "explanation": "中耳には、鼓膜の振動を増幅して内耳に伝える３つの小さな骨、槌骨、砧骨、鐙骨があります。"
+    "question": "皮膚の3層構造に含まれないものはどれか。",
+    "options": ["表皮", "真皮", "皮下組織", "立毛筋"],
+    "answer": 3,
+    "explanation": "立毛筋は皮膚の付属器に含まれる筋肉で、皮膚の3層構造には含まれません。"
   },
   {
-    "question": "内耳で、回転運動の加速度を感知する器官はどれか。",
-    "options": ["蝸牛", "前庭", "半規管", "鼓室"],
+    "question": "皮膚の中で血管が存在しない部分はどれか。",
+    "options": ["表皮", "真皮", "皮下組織", "毛包"],
+    "answer": 0,
+    "explanation": "表皮には血管が存在せず、栄養や酸素は真皮の血管から拡散によって供給されます。"
+  },
+  {
+    "question": "皮膚の厚さが身体の部位によって最も厚い部分はどれか。",
+    "options": ["手掌", "背中", "腹部", "頬"],
+    "answer": 0,
+    "explanation": "手掌や足底の表皮は特に厚く、摩擦や圧力に耐えるように適応しています。"
+  },
+  {
+    "question": "皮膚腺のうち、脂肪性の分泌物を出して皮膚や毛を滑らかにする働きを持つのはどれか。",
+    "options": ["汗腺", "乳腺", "脂腺", "立毛筋"],
     "answer": 2,
-    "explanation": "半規管は、内部にリンパ液を満たした３つのループ状の管からなり、回転運動によるリンパ液の動きを感知することで、体のバランスを保つのに役立っています。"
+    "explanation": "脂腺は脂肪性の分泌物を出して、皮膚や毛の表面を滑らかに保ちます。"
   },
   {
-    "question": "音の高低は、何と表現されるか？",
-    "options": ["dB（デシベル）", "Hz（ヘルツ）", "W（ワット）", "Pa（パスカル）"],
-    "answer": 1,
-    "explanation": "音の高さは周波数で表され、単位はHz（ヘルツ）です。1秒間に何回振動するかを表しています。"
-  },
-  {
-    "question": "ヒトの可聴音の周波数範囲はどれか。",
-    "options": ["2～200 Hz", "20～20,000 Hz", "200～200,000 Hz", "2,000～2,000,000 Hz"],
-    "answer": 1,
-    "explanation": "ヒトが聞き取れる音の周波数範囲はおよそ20～20,000 Hzです。これより高い周波数の音は超音波と呼ばれます。"
-  },
-  {
-    "question": "中耳炎などで、音が内耳まで伝わりにくくなる難聴を何というか。",
-    "options": ["感音難聴", "伝音難聴", "老人性難聴", "騒音性難聴"],
-    "answer": 1,
-    "explanation": "伝音難聴は、外耳や中耳の障害によって、音が内耳にうまく伝わらないために起こる難聴です。中耳炎などが原因となることがあります。"
-  },
-  {
-    "question": "味蕾はどこに存在するか？",
-    "options": ["舌の表面", "歯茎", "口蓋", "咽頭"],
+    "question": "真皮の主成分で、皮膚の弾力を支える線維はどれか。",
+    "options": ["コラーゲン線維", "エラスチン線維", "ケラチン線維", "筋線維"],
     "answer": 0,
-    "explanation": "味蕾は、舌の表面にある乳頭と呼ばれる小さな突起の中に存在します。"
+    "explanation": "真皮の主成分であるコラーゲン線維は、皮膚の強靭さと弾力を支える役割を果たします。"
   },
   {
-    "question": "基本的な味覚に含まれないのはどれか？",
-    "options": ["甘味", "うま味", "辛味", "苦味"],
+    "question": "皮膚が外部からの紫外線を防ぐために含んでいる物質はどれか。",
+    "options": ["コラーゲン", "ケラチン", "メラニン", "エラスチン"],
     "answer": 2,
-    "explanation": "基本的な味覚は、甘味、酸味、塩味、苦味、うま味の５種類です。辛味は痛覚刺激によるものです。"
+    "explanation": "メラニンは紫外線を吸収し、皮膚深部に到達するのを防ぐ役割を果たします。"
   },
   {
-    "question": "嗅細胞はどこに存在するか？",
-    "options": ["鼻腔の最上部", "鼻腔の最下部", "副鼻腔", "咽頭"],
-    "answer": 0,
-    "explanation": "嗅細胞は鼻腔の最上部にある嗅粘膜に存在し、匂い物質を感知します。"
-  },
-  {
-    "question": "痛覚は、どの神経終末が刺激されることで起こるか。",
-    "options": ["運動神経終末", "自由神経終末", "ルフィニ終末", "パチニ小体"],
+    "question": "触覚を感知する感覚装置はどれか。",
+    "options": ["自由神経終末", "マイスネル小体", "パチニ小体", "ランゲルハンス細胞"],
     "answer": 1,
-    "explanation": "自由神経終末は、皮膚や粘膜、骨膜、内臓などに広く分布し、痛み刺激を感知する受容器として機能します。"
+    "explanation": "マイスネル小体は触覚を感知する感覚装置で、主に真皮乳頭内に存在します。"
   },
   {
-    "question": "体性痛と内臓痛のうち、局在がはっきりしているのはどちらか？",
-    "options": ["体性痛", "内臓痛"],
+    "question": "皮膚の中で痛覚を感知する構造はどれか。",
+    "options": ["自由神経終末", "マイスネル小体", "パチニ小体", "脂腺"],
     "answer": 0,
-    "explanation": "体性痛は、皮膚や筋肉、骨など体表の痛みで、痛みの発生場所が比較的はっきりしています。一方、内臓痛は、痛みの発生場所が漠然としていることが多く、関連痛として体表に痛みを感じることもあります。"
+    "explanation": "自由神経終末は痛覚を感知し、真皮乳頭や表皮に分布しています。"
   },
   {
-    "question": "内臓の痛みを体表の痛みとして感じる現象を何というか。",
-    "options": ["投射痛", "関連痛", "幻肢痛", "神経障害性疼痛"],
+    "question": "皮膚から分泌される汗が脂肪やタンパク質を多く含む場合、分泌される汗腺はどれか。",
+    "options": ["エクリン汗腺", "アポクリン汗腺", "脂腺", "乳腺"],
     "answer": 1,
-    "explanation": "内臓からの痛みの信号が、脊髄で皮膚からの痛みの信号と同じ経路を通るため、内臓の痛みを皮膚の痛みとして感じる錯覚が生じます。これを関連痛といいます。"
+    "explanation": "アポクリン汗腺は脂肪やタンパク質に富む汗を分泌し、腋窩や耳道などに分布しています。"
   },
   {
-    "question": "強力な鎮痛作用を持つオピオイド鎮痛薬はどれか。",
-    "options": ["アスピリン", "インドメタシン", "モルヒネ", "アセトアミノフェン"],
-    "answer": 2,
-    "explanation": "モルヒネは、オピオイド受容体に作用する強力な鎮痛薬で、激しい痛みを緩和するために使用されます。"
-  },
-  {
-    "question": "耳垢は、何から分泌される物質と、何からできているか。",
-    "options": ["アポクリン腺、上皮細胞", "エクリン腺、ケラチン", "皮脂腺、メラニン", "耳下腺、コラーゲン"],
-    "answer": 0,
-    "explanation": "耳垢は、外耳道にあるアポクリン腺（耳道腺）から分泌される物質と、剥がれ落ちた上皮細胞が混ざってできています。"
-  },
-  {
-    "question": "蝸牛内にある聴覚受容器は何か。",
-    "options": ["クプラ", "耳石", "コルチ器", "膨大部稜"],
-    "answer": 2,
-    "explanation": "コルチ器は蝸牛管の基底膜上にあり、有毛細胞が音の振動を電気信号に変換する役割を担っています。"
-  },
-  {
-    "question": "鼓室と咽頭を繋ぎ、鼓室内圧の調整をしている器官はどれか。",
-    "options": ["耳管", "外耳道", "半規管", "蝸牛管"],
-    "answer": 0,
-    "explanation": "耳管（ユースタキオ管）は、鼓室と咽頭を繋ぐ管で、鼓室内の気圧を調整する役割を担っています。耳管が開閉することで、鼓膜が正常に振動できるようになっています。"
-  },
-  {
-    "question": "舌の味覚を支配する神経はどれか。",
-    "options": ["三叉神経、顔面神経、舌咽神経", "三叉神経、迷走神経、副神経", "顔面神経、舌咽神経、迷走神経", "舌咽神経、迷走神経、副神経"],
-    "answer": 0,
-    "explanation": "舌前2/3の味覚は顔面神経、舌後1/3の味覚は舌咽神経が支配しています。また、舌前2/3の触覚は三叉神経が支配しています。"
-  },
-  {
-    "question": "嗅覚の情報を脳に伝える神経はどれか。",
-    "options": ["嗅神経", "視神経", "動眼神経", "滑車神経"],
-    "answer": 0,
-    "explanation": "嗅神経は、嗅細胞の軸索が集まって形成され、嗅覚情報を嗅球から脳に伝達します。"
-  },
-  {
-    "question": "痛みを増強する物質として、誤っているものはどれか。",
-    "options": ["ブラジキニン", "プロスタグランジン", "エンケファリン", "サブスタンスP"],
-    "answer": 2,
-    "explanation": "エンケファリンは、鎮痛作用のある内因性オピオイドです。ブラジキニン、プロスタグランジン、サブスタンスPは発痛物質です。"
-  },
-{
-    "question": "組織損傷時に産生され、発痛作用を持つ物質はどれか",
-    "options": ["ブラジキニン", "ヒスタミン", "セロトニン", "アセチルコリン"],
-    "answer": 0,
-    "explanation": "ブラジキニンは、組織損傷時に産生される生理活性物質で、発痛作用や炎症反応を引き起こします。"
-  },
-{
-    "question": "平衡覚を司る器官はどれか",
-    "options": ["蝸牛", "前庭と半規管", "コルチ器", "鼓膜"],
+    "question": "皮膚の吸収機能（経皮吸収）において、吸収されやすい物質の性質はどれか。",
+    "options": ["水溶性で分子量が大きい", "脂溶性で分子量が小さい", "水溶性で分子量が小さい", "脂溶性で分子量が大きい"],
     "answer": 1,
-    "explanation": "前庭は直線加速度や傾きを、半規管は回転加速度を感知し、平衡覚を保つのに重要な役割を果たしています。"
+    "explanation": "脂溶性で分子量が小さい物質は皮膚を通じて吸収されやすい特徴を持っています。"
+  },
+  {
+    "question": "表皮に存在し、免疫機能を担う細胞はどれか。",
+    "options": ["メラニン細胞", "ランゲルハンス細胞", "ケラチン細胞", "線維芽細胞"],
+    "answer": 1,
+    "explanation": "ランゲルハンス細胞は、異物を捕食し、抗原提示を行うことで免疫機能に関与します。"
+  },
+  {
+    "question": "皮膚の血管が持つ主な役割はどれか。",
+    "options": ["痛覚を感知する", "体温調節を行う", "皮膚の色を決める", "角化を助ける"],
+    "answer": 1,
+    "explanation": "皮膚の血管は血流を調節することで、体温調節の役割を担っています。"
+  },
+  {
+    "question": "皮下組織の役割として適切なのはどれか。",
+    "options": ["表皮を支える", "外力から身体を保護する", "角化を促進する", "血管網を形成する"],
+    "answer": 1,
+    "explanation": "皮下組織は脂肪を蓄積して体熱の喪失を防ぎ、外力に対するクッションの役割を果たします。"
+  },
+  {
+    "question": "ランゲルハンス細胞が異物を捕食した後、情報を伝える細胞はどれか。",
+    "options": ["B細胞", "T細胞", "NK細胞", "好中球"],
+    "answer": 1,
+    "explanation": "ランゲルハンス細胞は、異物を捕食後、T細胞に情報を伝える（抗原提示）役割を持っています。"
   }
-
 ]
 ;
 
