--- a/kotaihasseitorouka.html
+++ b/kotaihasseitorouka.html
@@ -242,7 +242,7 @@
   "explanation": "精子の先体から酵素が放出され、卵の透明帯を消化して卵内に進入します。"
 },
 {
-  "question": "受精卵が細胞分裂を繰り返して桑実胚になるのは次のどの過程ですか？",
+  "question": "受精卵が繰り返し細胞分裂を行い、多細胞になっていく過程を何というか？",
   "options": [
     "胚子",
     "卵割",
