--- a/kotaihasseitorouka.html
+++ b/kotaihasseitorouka.html
@@ -330,17 +330,6 @@
   "explanation": "妊娠中、循環血液量は約50%増加します。赤血球数も増加しますが、血漿量の増加がより著しいため、ヘマトクリット値は希釈されて低下します。"
 },
 {
-  "question": "初乳と真乳の違いとして正しいのはどれですか？",
-  "options": [
-    "初乳はカゼインを含む",
-    "初乳は真乳よりも黄色みを帯びる",
-    "初乳は分娩後1か月後に分泌される",
-    "初乳はプロラクチンによって分泌される"
-  ],
-  "answer": 1,
-  "explanation": "初乳は分娩後すぐに分泌され、カゼインを含まず、一般に黄色みを帯びた色をしています。真乳は3〜4日後に分泌されます。"
-},
-{
   "question": "分娩第2期（娩出期）に起こるのは次のどれですか？",
   "options": [
     "羊水が破れる",
@@ -376,24 +365,13 @@
 {
   "question": "胎児の血液が動脈管（ボタロ管）を通じて肺を迂回し流れる先はどこですか？",
   "options": [
-    "上行大動脈",
+    "肺動脈",
     "下行大動脈",
     "右心房",
     "左心房"
   ],
   "answer": 1,
   "explanation": "胎児の血液は、右心室から肺動脈幹に送り出され、動脈管を通じて下行大動脈に流れます。"
-},
-{
-  "question": "分娩に関わるホルモンとして、オキシトシンの主な作用はどれですか？",
-  "options": [
-    "子宮頸部の拡張",
-    "陣痛の促進",
-    "乳腺の発育",
-    "胎児の成長"
-  ],
-  "answer": 1,
-  "explanation": "オキシトシンは子宮筋層の収縮を促進し、陣痛を強化する役割を果たします。"
 },
 {
   "question": "分娩後に胎盤などが排出されるのは分娩のどの時期ですか？",
@@ -482,17 +460,6 @@
   ],
   "answer": 1,
   "explanation": "エストロゲンは女性の閉経後に激減し、さまざまな更年期症状を引き起こします。"
-},
-{
-  "question": "テロメアの短縮が関連している老化に関する説は次のうちどれですか？",
-  "options": [
-    "生物時計説",
-    "エラー破綻説",
-    "プログラム説",
-    "フリーラジカル説"
-  ],
-  "answer": 2,
-  "explanation": "プログラム説では、テロメアの短縮が細胞の寿命を制限する役割を果たしているとされています。"
 },
 {
   "question": "加齢による循環器系の変化として正しいのはどれですか？",
