--- a/jinzounokouzou.html
+++ b/jinzounokouzou.html
@@ -220,17 +220,6 @@
   "explanation": "腎小体は糸球体と、それを包むボウマン嚢から構成されています。"
 },
 {
-  "question": "糸球体において血液の濾過を行う主な圧力はどれですか？",
-  "options": [
-    "動脈圧",
-    "ボウマン嚢内圧",
-    "浸透圧",
-    "腎盂圧"
-  ],
-  "answer": 0,
-  "explanation": "糸球体では、主に動脈圧を利用して血液が濾過されます。"
-},
-{
   "question": "糸球体で濾過される液体の量は1日にどのくらいですか？",
   "options": [
     "10L",
@@ -245,9 +234,9 @@
   "question": "腎臓の機能として正しいのは次のうちどれですか？",
   "options": [
     "血液の酸素化",
-    "血液からの老廃物の除去",
+    "血液からの老廃物の排出",
     "栄養の吸収",
-    "ホルモンの分泌"
+    "消化作用"
   ],
   "answer": 1,
   "explanation": "腎臓は血液から老廃物を除去し、尿として排出する機能を持っています。"
