--- a/kotaihasseitorouka.html
+++ b/kotaihasseitorouka.html
@@ -613,7 +613,7 @@
         attendanceLink.style.display = 'block';
         attendanceLink.innerHTML = `
           <p>おめでとうございます！80%以上の正答率です。</p>
-          <a href="https://forms.gle/YktXvPmRWcNLn7vj8" target="_blank">出席確認フォームに回答する</a>
+          <a href="https://forms.gle/VvVTZJ6ZVNNDuzqw5" target="_blank">出席確認フォームに回答する</a>
         `;
       }
     }
