--- a/sannennki.html
+++ b/sannennki.html
@@ -536,7 +536,7 @@
         attendanceLink.style.display = 'block';
         attendanceLink.innerHTML = `
           <p>おめでとうございます！80%以上の正答率です。</p>
-          <a href="https://forms.gle/K1RP1V8FReaj2JSC6" target="_blank">出席確認フォームに回答する</a>
+          <a href="https://forms.gle/RwtysEum3WeU9Y1k6" target="_blank">出席確認フォームに回答する</a>
         `;
       }
     }
