--- a/hainyouro.html
+++ b/hainyouro.html
@@ -352,7 +352,7 @@
   "explanation": "尿閉は、腎臓で尿は作られているものの、排尿することができない状態を指します。"
 },
 {
-  "question": "排尿困難の原因として最も多いのは何か？",
+  "question": "中年以降の男性における排尿困難の原因として最も多いのは何か？",
   "options": [
     "精神的ストレス",
     "腎盂腎炎",
@@ -374,7 +374,7 @@
   "explanation": "昼間の排尿回数は通常4〜8回ですが、これを超える場合は頻尿とされます。"
 },
 {
-  "question": "尿失禁で最も多いのはどのようなときにおこるか？",
+  "question": "女性において最も多いタイプの尿失禁が起こりやすいのはどのようなときか。",
   "options": [
     "夜間睡眠時",
     "食事中",
