--- a/sannennki.html
+++ b/sannennki.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>酸塩基２クイズ</title>
+  <title>酸塩基クイズ</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -209,7 +209,7 @@
     "explanation": "ふつうの生活での排尿量は1日平均1,500 mLとされています。"
   },
   {
-    "question": "発汗がない状態での体外に出ていく水分のうち、不感蒸散として失われる量の合計は次のうちどれですか？",
+    "question": "発汗がない状態での体外に出ていく水分のうち、皮膚からの不感蒸散として失われる量の合計は次のうちどれですか？",
     "options": [
       "100 mL",
       "300 mL",
@@ -217,7 +217,7 @@
       "1,500 mL"
     ],
     "answer": 2,
-    "explanation": "体内の水分が皮膚表面にしみ出し蒸発することで、約600 mLの水分が1日あたり失われます。これは不感蒸散と呼ばれます。"
+    "explanation": "不感蒸散は皮膚と呼気から水分が蒸発する現象です。そのうち皮膚からの不感蒸泄では1日あたり約600mLが失われます。（呼気からは約300mLが失われます）"
   },
   {
     "question": "混合性脱水とは次のうちどれに当てはまりますか？",
@@ -272,7 +272,7 @@
       "血液のNa+濃度が低いから"
     ],
     "answer": 1,
-    "explanation": "乳児では成人に比べて体内水分量が多く、容易に脱水症に陥ることがあるため注意が必要です。"
+    "explanation": "乳児は成人に比べて体重に占める水分量が多く（約70～75%）、特に変動しやすい細胞外液の割合が高いです。また、水分の代謝回転（ターンオーバー）が速いため、下痢や嘔吐などによる少しの水分喪失でも容易に脱水症に陥ります。"
   },
   {
     "question": "一次脱水の主な特徴として正しいものは次のうちどれですか？",
@@ -381,8 +381,8 @@
       "バソプレシン",
       "アルドステロン"
     ],
-    "answer": 2,
-    "explanation": "バソプレシン（抗利尿ホルモン：ADH）は尿の生成を調整し、体液のpHバランスにも影響を与えます。"
+    "answer": 3,
+    "explanation": "アルドステロンは遠位尿細管・集合管の間在細胞でH⁺分泌（およびHCO₃⁻再吸収）を促進し、腎性による酸塩基平衡の調節に重要な役割を果たします。"
   },
   {
     "question": "体液のpHがアルカリ性に傾いた場合の腎性代償として正しいのは次のうちどれですか？",
