--- a/sekizuisinkeitonousinkei.html
+++ b/sekizuisinkeitonousinkei.html
@@ -224,9 +224,9 @@
 {
   "question": "神経叢を形成せずにそのまま標的に向かう神経はどれですか？",
   "options": [
-    "腕神経叢",
-    "腰神経叢",
-    "仙骨神経叢",
+    "橈骨神経",
+    "大腿経叢",
+    "坐骨神経",
     "肋間神経"
   ],
   "answer": 3,
